welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  while (vubiscuit()==false) {
    for (i <- 1 to 6) {
      vubiscuit()
      avance()
    }
    recule(6)
  }
  if (vubiscuit()==true) {
    return true
  }
}

def vubiscuit() :Boolean = {
  if (estSurBiscuit()==true) {
    return true;
  } else {
    return false
  } 
}